[gd_scene load_steps=13 format=2]

[ext_resource path="res://Vehicles/Vehicle.gd" type="Script" id=1]
[ext_resource path="res://FX/sprites/regularExplosion05.png" type="Texture" id=2]
[ext_resource path="res://FX/sprites/regularExplosion06.png" type="Texture" id=3]
[ext_resource path="res://FX/sprites/regularExplosion04.png" type="Texture" id=4]
[ext_resource path="res://FX/sprites/regularExplosion03.png" type="Texture" id=5]
[ext_resource path="res://FX/sprites/regularExplosion00.png" type="Texture" id=6]
[ext_resource path="res://FX/sprites/regularExplosion01.png" type="Texture" id=7]
[ext_resource path="res://FX/sprites/regularExplosion08.png" type="Texture" id=8]
[ext_resource path="res://FX/sprites/regularExplosion07.png" type="Texture" id=9]
[ext_resource path="res://FX/sprites/regularExplosion02.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.2399
height = 54.9617

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Vehicle" type="Area2D"]
z_index = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -30.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Vehicle_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Vehicle_area_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
